fix dark mode bug, refactor darkmode toggle

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -78,7 +78,7 @@ form input {
 .editor-dark {
   min-height: 90vh;
   width: 65%;
-  max-width: 120rem;
+  max-width: 128rem;
   padding: 12rem 10rem 5rem;
   font-size: 1.5rem;
   line-height: 175%;
